topic1.2/jenkins/jenkins_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkins.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-svc
          servicePort: jenkinssvcport
